fix(scss): align search to end

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -348,7 +348,7 @@ blockquote[class="transclude"] {
 
 header {
   .search {
-    grid-area: 1 / 3 / 1 / 3;
+    grid-area: 1 / 3 / 1 / 4;
   }
 
   .keybind {
@@ -720,6 +720,7 @@ section[data-footnotes] {
 }
 
 .search {
+  max-width: unset;
   & > .search-button {
     border-radius: 0px;
   }
