--- a/quartz/styles/pages/landing.scss
+++ b/quartz/styles/pages/landing.scss
@@ -43,7 +43,9 @@ body[data-slug="index"] {
 
   header {
     display: flex !important;
-    margin: 2rem 0 !important;
+    margin-top: 1rem !important;
+    margin-bottom: 0.5rem !important;
+    border: none;
   }
 
   & > *,
